# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/thermal_manager/thermalmgr.gni")

config("thermalsrv_private_config") {
  include_dirs = [ "${thermal_manager_path}/services/zidl/include" ]
}

config("thermalsrv_public_config") {
  include_dirs = [ "native/include" ]
}

ohos_shared_library("thermalsrv_client") {
  sources =
      [ "${thermal_manager_path}/frameworks/native/thermal_mgr_client.cpp" ]

  configs = [
    "${utils_path}:utils_config",
    ":thermalsrv_private_config",
  ]

  public_configs = [ ":thermalsrv_public_config" ]

  deps = [
    "//base/powermgr/thermal_manager/services/zidl:thermalmgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "powermgr"
  part_name = "thermal_manager"
}

ohos_shared_library("thermalmgr_listener") {
  sources =
      [ "${thermal_manager_path}/frameworks/native/thermal_mgr_listener.cpp" ]

  configs = [
    "${utils_path}:utils_config",
    ":thermalsrv_private_config",
  ]

  public_configs = [ ":thermalsrv_public_config" ]

  deps = [
    "${thermal_manager_path}/interfaces/innerkits:thermalsrv_client",
    "//base/powermgr/thermal_manager/services/zidl:thermalmgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "powermgr"
  part_name = "thermal_manager"
}

group("thermalmgr_innerkits_native") {
  deps = [
    ":thermalmgr_listener",
    ":thermalsrv_client",
  ]
}
