# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../thermalmgr.gni")

config("thermalmgr_ipc_private_config") {
  include_dirs = [ "${thermal_inner_api}/native/include" ]
}

config("thermalmgr_ipc_public_config") {
  include_dirs = [ "include" ]
}

deps_ex = [
  "bundle_framework:appexecfwk_base",
  "hilog:libhilog",
  "hicollie:libhicollie",
  "ipc:ipc_core",
  "c_utils:utils",
]

ohos_shared_library("thermalmgr_stub") {
  sources = [
    "${thermal_frameworks}/native/thermal_srv_sensor_info.cpp",
    "src/thermal_action_callback_stub.cpp",
    "src/thermal_srv_stub.cpp",
    "src/thermal_temp_callback_stub.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":thermalmgr_ipc_private_config",
    "${utils_path}:coverage_flags",
  ]

  public_configs = [ ":thermalmgr_ipc_public_config" ]

  external_deps = deps_ex

  subsystem_name = "powermgr"
  part_name = "thermal_manager"
}

ohos_shared_library("thermalmgr_proxy") {
  sources = [
    "${thermal_manager_path}/frameworks/native/thermal_srv_sensor_info.cpp",
    "src/thermal_action_callback_proxy.cpp",
    "src/thermal_level_callback_proxy.cpp",
    "src/thermal_level_callback_stub.cpp",
    "src/thermal_srv_proxy.cpp",
    "src/thermal_temp_callback_proxy.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":thermalmgr_ipc_private_config",
    "${utils_path}:coverage_flags",
  ]

  public_configs = [ ":thermalmgr_ipc_public_config" ]

  external_deps = deps_ex

  subsystem_name = "powermgr"
  innerapi_tags = [ "platformsdk" ]
  part_name = "thermal_manager"
}
